--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -24,10 +15,10 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-ul li {
+  display: inline-block;
+  padding: 10px;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
