--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,57 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.navbaar {
+  width: 100%;
+  background-color: skyblue;
+}
+.nav-ul {
+  margin: 0px;
+}
 .nav-ul li {
   display: inline-block;
   padding: 10px;
+  margin: 0px;
+}
+.nav-ul li a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+}
+.footer {
+  position: absolute;
+  bottom: 0px;
+  background-color: skyblue;
+  text-align: center;
+  width: 100%;
+}
+/* Sign up */
+.signup-main {
+  margin-left: 30%;
+}
+.input-box {
+  display: block;
+  margin: 25px;
+  padding: 20px;
+  width: 300px;
+  border: 3px solid skyblue;
+}
+.signup-button {
+  margin: 25px;
+  padding: 10px;
+  width: 150px;
+  background-color: skyblue;
+  border: ipx solid;
+  cursor: pointer;
+}
+.text-right {
+  text-align: right;
+  padding-right: 2rem;
+}
+.logo {
+  border-radius: 50%;
+  width: 70px;
+  float: left;
 }
 @keyframes App-logo-spin {
   from {
