--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,30 @@
   width: 70px;
   float: left;
 }
+/* add product screen */
+.error-msg {
+  color: red;
+  margin-top: -20px;
+  display: block;
+  margin-left: 20px;
+  margin-bottom: 0px;
+}
+/* product list screen  */
+.product-section {
+  text-align: center;
+}
+.product-list {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+}
+.product-list li {
+  width: 150px;
+  border: 1px solid black;
+  padding: 5px 15px 5px 15px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
